# libmip

./: .travis.yml  CMakeLists.txt  INSTALL  README  README.md  infos.txt  system_client.cpp
data/sounds/: 1.flac  10.flac  100.flac  101.flac  102.flac  103.flac  104.flac  105.flac  106.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  17.flac  18.flac  19.flac  2.flac  20.flac  21.flac  22.flac  23.flac  24.flac  25.flac  26.flac  27.flac  28.flac  29.flac  3.flac  30.flac  31.flac  32.flac  33.flac  34.flac  35.flac  36.flac  37.flac  38.flac  39.flac  (+66 more)
doc/: WoWWeeMiP.url  commands.gnumeric  commands.ods  joystick_control.mkv  mip_calibrate.m  mip_calibrate.ods  notes.tex  notes2.txt
old/: CMakeLists.txt  bluez-5.27.tar.xz  compile_bluez.sh  drdobbs.cpp  drdobbs2.c  inquiry_raw.cpp
src/: CMakeLists.txt  bluetooth_mac2device.h  exec_system_get_output.h  find_and_replace.h  gattmip.cpp  gattmip.h  gattmip_prompt.cpp  gattmip_test.cpp  gatttoolmip_prompt.cpp  gatttoolmip_test.cpp  mip.h  mip_prompt.cpp  mipcommands.h  string_casts.h  string_split.h  system_client.cpp
src/libgatt/src/: att.h  gatt.c  gatt.h  utils.c
src/old/: client.cpp  gatttool.cpp  inquiry.cpp  scanner2.cpp
src/samples/: CMakeLists.txt  gatttoolmip_test.cpp  joystick_control.cpp  play_all_sounds.cpp  random_walk.cpp  speed_calibration.cpp  square.cpp
